--- a/frontend/src/app/modules/shared/components/header/header.component.html
+++ b/frontend/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand ml-lg-5" href="">SEPM Group Phase</a>
+  <a class="navbar-brand ml-lg-5" href="">Aktoria</a>
   <button
     class="navbar-toggler ml-5"
     type="button"
@@ -36,7 +36,7 @@
         class="nav-link"
         *ngIf="authService.isLoggedIn()"
         routerLink="/"
-        (click)="authService.logoutUser()"
+        (click)="logout()"
         >Logout</a
       >
     </ul>
