--- a/frontend/src/app/modules/features/landing/landing.component.html
+++ b/frontend/src/app/modules/features/landing/landing.component.html
@@ -1,19 +1,24 @@
-<div class="jumbotron mt-5">
-  <h1 class="display-4">Willkommen zu Aktoria!</h1>
-  <hr class="my-4" />
-  <a
-    *ngIf="!authService.isLoggedIn()"
-    class="btn btn-primary btn-lg"
-    routerLink="/login"
-    role="button"
-    >Login</a
-  >
-  <div *ngIf="authService.isLoggedIn()">
-    <p>Check out the latest message from the SEPM group phase.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" routerLink="/message" role="button"
-        >Message</a
+<app-page-layout>
+  <div class="jumbotron mt-5">
+    <h1 class="display-4">Willkommen zu Aktoria!</h1>
+    <p class="lead">Deine App um jederzeit, alleine Skripten zu üben.</p>
+    <hr class="my-4" />
+    <div class="flex-row" *ngIf="!authService.isLoggedIn()">
+      <a class="btn btn-primary btn-lg me-3" routerLink="/login" role="button"
+        >Login</a
       >
-    </p>
+      <a class="btn btn-primary btn-lg" routerLink="/register" role="button"
+        >Registrieren</a
+      >
+    </div>
+    <!-- TODO: remove -->
+    <div *ngIf="authService.isLoggedIn()">
+      <p>Check out the latest message from the SEPM group phase.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" routerLink="/message" role="button"
+          >Message</a
+        >
+      </p>
+    </div>
   </div>
-</div>
+</app-page-layout>
