--- a/frontend/src/app/modules/features/login/login.component.html
+++ b/frontend/src/app/modules/features/login/login.component.html
@@ -1,8 +1,4 @@
 <app-page-layout>
-  <app-alert [show]="error" type="danger" (closeAlert)="vanishError()">
-    <strong>Authentication problems!</strong> {{ errorMessage }}
-  </app-alert>
-
   <div class="row">
     <div class="col-md-6 mx-auto">
       <span class="anchor" id="formLogin"></span>
@@ -14,7 +10,7 @@
 
         <div class="card-body">
           <form class="form" [formGroup]="loginForm" (ngSubmit)="loginUser()">
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="inputUsername">Username</label>
               <input
                 type="text"
@@ -37,7 +33,7 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="password">Password</label>
               <input
                 type="password"
