#19: add basic registration form

--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column min-vh-100">
   <header *ngIf="showHeader">
     <nav class="px-5 py-3 navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="">Aktoria</a>
+      <a class="navbar-brand" routerLink="">Aktoria</a>
       <button
         class="navbar-toggler ml-5"
         type="button"
