--- a/frontend/src/app/modules/features/login/login.component.html
+++ b/frontend/src/app/modules/features/login/login.component.html
@@ -11,7 +11,7 @@
         <div class="card-body">
           <form class="form" [formGroup]="loginForm" (ngSubmit)="loginUser()">
             <div class="form-group mb-3">
-              <label for="inputUsername">Username</label>
+              <label for="inputUsername">Name</label>
               <input
                 type="text"
                 name="username"
@@ -34,7 +34,7 @@
             </div>
 
             <div class="form-group mb-3">
-              <label for="password">Password</label>
+              <label for="password">Passwort</label>
               <input
                 type="password"
                 name="password"
@@ -60,11 +60,7 @@
               </div>
             </div>
 
-            <button
-              type="button"
-              (click)="loginUser()"
-              class="btn btn-success float-right"
-            >
+            <button type="submit" class="btn btn-success float-right">
               Login
             </button>
           </form>
