--- a/frontend/src/app/modules/features/registration/registration.component.html
+++ b/frontend/src/app/modules/features/registration/registration.component.html
@@ -1,8 +1,123 @@
 <app-page-layout>
-  <!--
-<app-alert [show]="error" type="danger" (closeAlert)="vanishError()">
-  <strong>Authentication problems!</strong> {{ errorMessage }}
-</app-alert>
--->
-  register
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <span class="anchor" id="formLogin"></span>
+
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Registrieren</h3>
+        </div>
+
+        <div class="card-body">
+          <form
+            class="form"
+            [formGroup]="registerForm"
+            (ngSubmit)="registerUser()"
+          >
+            <div class="form-group mb-3">
+              <label for="inputUsername">Name</label>
+              <input
+                type="text"
+                name="username"
+                formControlName="username"
+                class="form-control"
+                id="inputUsername"
+                aria-describedby="usernameHelp"
+                placeholder="Dein Name"
+              />
+              <div
+                *ngIf="submitted && registerForm.controls.username.errors"
+                class="error"
+              >
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.username.errors.required"
+                  >Your username is required!
+                </small>
+              </div>
+            </div>
+
+            <div class="form-group mb-3">
+              <label for="inputUsername">Email</label>
+              <input
+                type="text"
+                formControlName="email"
+                class="form-control"
+                id="inputEmail"
+                placeholder="Deine Email Adresse"
+              />
+              <div
+                *ngIf="submitted && registerForm.controls.username.errors"
+                class="error"
+              >
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.username.errors.required"
+                  >Your username is required!
+                </small>
+              </div>
+            </div>
+
+            <div class="form-group mb-3">
+              <label for="password">Passwort</label>
+              <input
+                type="password"
+                formControlName="password"
+                class="form-control"
+                id="password"
+                placeholder="Passwort"
+              />
+              <div
+                *ngIf="submitted && registerForm.controls.password.errors"
+                class="error"
+              >
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.password.errors.required"
+                  >Your password is required!
+                </small>
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.password.errors.minlength"
+                  >Your password must be at least 8 characters long!
+                </small>
+              </div>
+            </div>
+
+            <div class="form-group mb-3">
+              <label for="password-confirm">Passwort wiederholen</label>
+              <input
+                type="password"
+                formControlName="passwordConfirm"
+                class="form-control"
+                id="password-confirm"
+                placeholder="Passwort"
+              />
+              <div
+                *ngIf="submitted && registerForm.controls.password.errors"
+                class="error"
+              >
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.password.errors.required"
+                  >Your password is required!
+                </small>
+                <small
+                  class="form-text text-warning"
+                  *ngIf="registerForm.controls.password.errors.minlength"
+                  >Your password must be at least 8 characters long!
+                </small>
+              </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn btn-success float-right">
+                Registrieren
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </app-page-layout>
