--- a/frontend/src/app/modules/core/components/toasts/toasts-item/toasts-item.component.html
+++ b/frontend/src/app/modules/core/components/toasts/toasts-item/toasts-item.component.html
@@ -1,7 +1,7 @@
 <div class="pt-2">
   <div
     class="toast show align-items-center text-white bg-{{
-      toast.type
+      toast.theme
     }} border-0"
     role="alert"
   >
@@ -9,9 +9,9 @@
       <div class="toast-body">{{ toast.message }}</div>
       <button
         (click)="close(toast)"
-        type="button"
-        class="btn-close btn-close-white me-2 m-auto"
         aria-label="Close"
+        class="btn-close btn-close-white me-2 m-auto"
+        type="button"
       ></button>
     </div>
   </div>
