--- a/frontend/src/app/modules/features/landing/landing.component.html
+++ b/frontend/src/app/modules/features/landing/landing.component.html
@@ -1,24 +1,23 @@
 <app-page-layout>
-  <div class="jumbotron mt-5">
+  <div *ngIf="!authService.isLoggedIn(); else loggedIn" class="jumbotron mt-5">
     <h1 class="display-4">Willkommen zu Aktoria!</h1>
     <p class="lead">Deine App um jederzeit, alleine Skripten zu üben.</p>
     <hr class="my-4" />
-    <div class="flex-row" *ngIf="!authService.isLoggedIn()">
-      <a class="btn btn-primary btn-lg me-3" routerLink="/login" role="button"
+    <div class="flex-row">
+      <a class="btn btn-primary btn-lg me-3" role="button" routerLink="/login"
         >Login</a
       >
-      <a class="btn btn-primary btn-lg" routerLink="/register" role="button"
+      <a class="btn btn-primary btn-lg" role="button" routerLink="/register"
         >Registrieren</a
       >
     </div>
-    <!-- TODO: remove -->
-    <div *ngIf="authService.isLoggedIn()">
-      <p>Check out the latest message from the SEPM group phase.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" routerLink="/message" role="button"
-          >Message</a
-        >
-      </p>
-    </div>
   </div>
+  <ng-template #loggedIn>
+    <div *ngIf="authService.isVerifiedEmail(); else emailVerification">
+      Logged in
+    </div>
+    <ng-template #emailVerification>
+      <app-email-verification></app-email-verification>
+    </ng-template>
+  </ng-template>
 </app-page-layout>
