--- a/frontend/src/app/modules/features/login/login.component.html
+++ b/frontend/src/app/modules/features/login/login.component.html
@@ -1,71 +1,53 @@
 <app-page-layout>
-  <div class="row">
-    <div class="col-md-6 mx-auto">
-      <span class="anchor" id="formLogin"></span>
-
-      <div class="card rounded-0">
-        <div class="card-header">
-          <h3 class="mb-0">Login</h3>
-        </div>
-
-        <div class="card-body">
-          <form class="form" [formGroup]="loginForm" (ngSubmit)="loginUser()">
-            <div class="form-group mb-3">
-              <label for="inputUsername">Name</label>
-              <input
-                type="text"
-                name="username"
-                formControlName="username"
-                class="form-control"
-                id="inputUsername"
-                aria-describedby="usernameHelp"
-                placeholder="Enter username"
-              />
-              <div
-                *ngIf="submitted && loginForm.controls.username.errors"
-                class="error"
-              >
-                <small
-                  class="form-text text-warning"
-                  *ngIf="loginForm.controls.username.errors.required"
-                  >Your username is required!
-                </small>
-              </div>
-            </div>
-
-            <div class="form-group mb-3">
-              <label for="password">Passwort</label>
-              <input
-                type="password"
-                name="password"
-                formControlName="password"
-                class="form-control"
-                id="password"
-                placeholder="Password"
-              />
-              <div
-                *ngIf="submitted && loginForm.controls.password.errors"
-                class="error"
-              >
-                <small
-                  class="form-text text-warning"
-                  *ngIf="loginForm.controls.password.errors.required"
-                  >Your password is required!
-                </small>
-                <small
-                  class="form-text text-warning"
-                  *ngIf="loginForm.controls.password.errors.minlength"
-                  >Your password must be at least 8 characters long!
-                </small>
-              </div>
-            </div>
-
-            <button type="submit" class="btn btn-success float-right">
-              Login
-            </button>
-          </form>
+  <app-card title="Login">
+    <form (ngSubmit)="submit()" [formGroup]="form" class="form">
+      <div class="form-group mb-3">
+        <label for="input-email">Email</label>
+        <input
+          class="form-control"
+          formControlName="email"
+          id="input-email"
+          name="email"
+          placeholder="Deine Email Adresse"
+          type="text"
+        />
+        <div *ngIf="getFormFieldHasError('email')" class="error">
+          <small
+            *ngIf="getFormFieldHasError('email', 'required')"
+            class="form-text text-warning"
+            >Bitte gib deine Email Adresse ein.
+          </small>
         </div>
       </div>
-    </div>
-  </div>
+      <div class="form-group mb-3">
+        <label for="input-password">Passwort</label>
+        <input
+          class="form-control"
+          formControlName="password"
+          id="input-password"
+          name="password"
+          placeholder="Passwort"
+          type="password"
+        />
+        <div *ngIf="getFormFieldHasError('password')" class="error">
+          <small
+            *ngIf="getFormFieldHasError('password', 'required')"
+            class="form-text text-warning"
+            >Bitte gib dein Passwort ein.
+          </small>
+          <small
+            *ngIf="getFormFieldHasError('password', 'minlength')"
+            class="form-text text-warning"
+            >Dein Passwort muss mindestens 8 Zeichen lang sein.
+          </small>
+        </div>
+      </div>
+      <app-button
+        [loading]="loading"
+        class="float-end"
+        label="Einloggen"
+        type="submit"
+      ></app-button>
+    </form>
+  </app-card>
 </app-page-layout>
