--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -1,15 +1,15 @@
 <div class="d-flex flex-column min-vh-100">
   <header *ngIf="showHeader">
-    <nav class="px-5 py-3 navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="px-5 navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" routerLink="">Aktoria</a>
       <button
-        class="navbar-toggler ml-5"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
+        class="navbar-toggler ml-5"
+        data-target="#navbarSupportedContent"
+        data-toggle="collapse"
+        type="button"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,8 +20,8 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a
-              class="nav-link"
               *ngIf="authService.isLoggedIn()"
+              class="nav-link"
               routerLink="/message"
               routerLinkActive="active"
               >Message</a
@@ -29,25 +29,24 @@
           </li>
         </ul>
         <ul class="navbar-nav">
-          <ng-container *ngIf="!authService.isLoggedIn()">
+          <ng-container *ngIf="!authService.isLoggedIn(); else loggedIn">
             <a class="nav-link" routerLink="/login" routerLinkActive="active"
               >Login</a
             >
             <a
               class="nav-link"
-              routerLink="/register"
               role="button"
+              routerLink="/register"
               routerLinkActive="active"
               >Registrieren</a
             >
           </ng-container>
-          <a
-            class="nav-link"
-            *ngIf="authService.isLoggedIn()"
-            routerLink="/"
-            (click)="logout()"
-            >Logout</a
-          >
+          <ng-template #loggedIn>
+            <a class="nav-link account" routerLink="/">
+              <bi class="h-100" name="person-circle"></bi>
+            </a>
+            <a (click)="logout()" class="nav-link" routerLink="/">Logout</a>
+          </ng-template>
         </ul>
       </div>
     </nav>
@@ -55,5 +54,5 @@
   <main class="p-5 flex-grow-1">
     <ng-content></ng-content>
   </main>
-  <footer *ngIf="showFooter" class="px-5 py-3 bg-light">Impressum</footer>
+  <footer *ngIf="showFooter" class="px-5 bg-light"></footer>
 </div>
