#19: update unit and e2e tests

--- a/frontend/src/app/modules/core/components/toasts/toasts-item/toasts-item.component.html
+++ b/frontend/src/app/modules/core/components/toasts/toasts-item/toasts-item.component.html
@@ -1,5 +1,6 @@
 <div class="pt-2">
   <div
+    *ngIf="toast"
     class="toast show align-items-center text-white bg-{{
       toast.theme
     }} border-0"
