#19: enhance form validation; refactor auth service

--- a/frontend/src/app/modules/core/components/toasts/toasts.component.html
+++ b/frontend/src/app/modules/core/components/toasts/toasts.component.html
@@ -1,8 +1,8 @@
 <div class="m-4">
   <app-toasts-item
-    @appear
     *ngFor="let toast of toastService.$toasts | async; let i = index"
-    [toast]="toast"
+    @lightAppear
     [style.z-index]="i"
+    [toast]="toast"
   ></app-toasts-item>
 </div>
