--- a/frontend/src/app/modules/features/login/login.component.html
+++ b/frontend/src/app/modules/features/login/login.component.html
@@ -11,13 +11,14 @@
           placeholder="Deine Email Adresse"
           type="text"
         />
-        <div *ngIf="getFormFieldHasError('email')" class="error">
-          <small
-            *ngIf="getFormFieldHasError('email', 'required')"
-            class="form-text text-warning"
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('email', 'required')"
             >Bitte gib deine Email Adresse ein.
-          </small>
-        </div>
+          </app-form-error>
+          <app-form-error *ngIf="fieldHasErrors('email', 'email')"
+            >Bitte gib eine gültige Email Adresse ein.
+          </app-form-error>
+        </app-form-errors>
       </div>
       <div class="form-group mb-3">
         <label for="input-password">Passwort</label>
@@ -29,20 +30,17 @@
           placeholder="Passwort"
           type="password"
         />
-        <div *ngIf="getFormFieldHasError('password')" class="error">
-          <small
-            *ngIf="getFormFieldHasError('password', 'required')"
-            class="form-text text-warning"
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('password', 'required')"
             >Bitte gib dein Passwort ein.
-          </small>
-          <small
-            *ngIf="getFormFieldHasError('password', 'minlength')"
-            class="form-text text-warning"
+          </app-form-error>
+          <app-form-error *ngIf="fieldHasErrors('password', 'minlength')"
             >Dein Passwort muss mindestens 8 Zeichen lang sein.
-          </small>
-        </div>
+          </app-form-error>
+        </app-form-errors>
       </div>
       <app-button
+        [disabled]="hasError()"
         [loading]="loading"
         class="float-end"
         label="Einloggen"
