--- a/frontend/src/app/modules/features/registration/registration.component.html
+++ b/frontend/src/app/modules/features/registration/registration.component.html
@@ -3,7 +3,7 @@
     <span class="anchor" id="formLogin"></span>
     <form (ngSubmit)="submit()" [formGroup]="form" class="form">
       <div class="form-group mb-3">
-        <label for="input-username">Name</label>
+        <label class="test" for="input-username">Name</label>
         <input
           class="form-control"
           formControlName="name"
@@ -12,13 +12,11 @@
           placeholder="Dein Name"
           type="text"
         />
-        <div *ngIf="submitted && form.controls.email.errors" class="error">
-          <small
-            *ngIf="form.controls.email.errors.required"
-            class="form-text text-warning"
-            >Your username is required!
-          </small>
-        </div>
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('name', 'required')"
+            >Bitte gib deinen Namen ein.
+          </app-form-error>
+        </app-form-errors>
       </div>
       <div class="form-group mb-3">
         <label for="input-email">Email</label>
@@ -29,13 +27,14 @@
           placeholder="Deine Email Adresse"
           type="text"
         />
-        <div *ngIf="submitted && form.controls.email.errors" class="error">
-          <small
-            *ngIf="form.controls.email.errors.required"
-            class="form-text text-warning"
-            >Your username is required!
-          </small>
-        </div>
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('email', 'required')"
+            >Bitte gib deine Email Adresse ein.
+          </app-form-error>
+          <app-form-error *ngIf="fieldHasErrors('email', 'email')"
+            >Bitte gib eine gültige Email Adresse ein.
+          </app-form-error>
+        </app-form-errors>
       </div>
       <div class="form-group mb-3">
         <label for="input-password">Passwort</label>
@@ -46,18 +45,14 @@
           placeholder="Passwort"
           type="password"
         />
-        <div *ngIf="submitted && form.controls.password.errors" class="error">
-          <small
-            *ngIf="form.controls.password.errors.required"
-            class="form-text text-warning"
-            >Your password is required!
-          </small>
-          <small
-            *ngIf="form.controls.password.errors.minlength"
-            class="form-text text-warning"
-            >Your password must be at least 8 characters long!
-          </small>
-        </div>
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('password', 'required')"
+            >Bitte gib dein Passwort ein.
+          </app-form-error>
+          <app-form-error *ngIf="fieldHasErrors('password', 'minlength')"
+            >Dein Passwort muss mindestens 8 Zeichen lang sein.
+          </app-form-error>
+        </app-form-errors>
       </div>
       <div class="form-group mb-3">
         <label for="input-password-confirm">Passwort wiederholen</label>
@@ -68,20 +63,17 @@
           placeholder="Passwort"
           type="password"
         />
-        <div *ngIf="submitted && form.controls.password.errors" class="error">
-          <small
-            *ngIf="form.controls.password.errors.required"
-            class="form-text text-warning"
-            >Your password is required!
-          </small>
-          <small
-            *ngIf="form.controls.password.errors.minlength"
-            class="form-text text-warning"
-            >Your password must be at least 8 characters long!
-          </small>
-        </div>
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('passwordConfirm', 'required')"
+            >Bitte wiederhole dein Passwort.
+          </app-form-error>
+          <app-form-error *ngIf="hasError('passwordsNotMatching')"
+            >Deine Passwörter stimmen nicht überein.
+          </app-form-error>
+        </app-form-errors>
       </div>
       <app-button
+        [disabled]="hasError()"
         [loading]="loading"
         class="float-end"
         label="Registrieren"
