#21: Add script components and script service

--- a/frontend/src/app/modules/features/landing/landing.component.html
+++ b/frontend/src/app/modules/features/landing/landing.component.html
@@ -10,6 +10,9 @@
       <a class="btn btn-primary btn-lg" role="button" routerLink="/register"
         >Registrieren</a
       >
+      <a class="btn btn-primary btn-lg" role="button" routerLink="/scripts"
+        >Temp: Skripten</a
+      >
     </div>
   </div>
   <ng-template #loggedIn>
