--- a/frontend/src/app/modules/features/scripts/scripts.component.html
+++ b/frontend/src/app/modules/features/scripts/scripts.component.html
@@ -1,1 +1,7 @@
-<p>scripts works!</p>
+<app-page-layout>
+  <h2>Deine Skripte</h2>
+  <!--TODO: Filter by owned and shared scripts-->
+  <app-script-list class="script-container"></app-script-list>
+  <h2>Geteilte Skripte</h2>
+  <app-script-list></app-script-list>
+</app-page-layout>
