--- a/frontend/src/app/modules/features/scripts/components/script/script/script.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script/script/script.component.html
@@ -1,1 +1,10 @@
-<app-card class="script-item" title="TITLE"></app-card>
+<div class="card" style="width: 18rem">
+  <img
+    alt="..."
+    class="card-img-top"
+    src="../../../../../../../assets/illustrations/script.svg"
+  />
+  <div class="card-body">
+    <h5 class="card-title">{{ title }}</h5>
+  </div>
+</div>
