#19: complete email verification

--- a/frontend/src/app/modules/features/verify-email/verify-email.component.html
+++ b/frontend/src/app/modules/features/verify-email/verify-email.component.html
@@ -1,5 +1,5 @@
 <app-page-layout>
-  <app-card title={{status}}>
-    {{content}}
+  <app-card [title]="status">
+    {{ content }}
   </app-card>
 </app-page-layout>
