#20: reset and restore password frontend

--- a/frontend/src/app/modules/features/login/login.component.html
+++ b/frontend/src/app/modules/features/login/login.component.html
@@ -39,6 +39,7 @@
           </app-form-error>
         </app-form-errors>
       </div>
+      <a style="color:gray" routerLink="/password/reset">Passwort vergessen?</a>
       <app-button
         [disabled]="hasError()"
         [loading]="loading"
