--- a/frontend/src/app/modules/features/scripts/scripts.component.html
+++ b/frontend/src/app/modules/features/scripts/scripts.component.html
@@ -1,12 +1,6 @@
 <app-page-layout>
-  <h2>Deine Skripte</h2>
-  <app-script-list>
-    <app-script
-      class="clickable-card"
-      routerLink="/scripts/new"
-      title="Neues Skript hochladen"
-    ></app-script>
-  </app-script-list>
-  <h2>Geteilte Skripte</h2>
-  <app-script-list></app-script-list>
+  <app-script-list
+    hasUploadButton="true"
+    title="Deine Skripte"
+  ></app-script-list>
 </app-page-layout>
