--- a/frontend/src/app/modules/shared/components/card/card.component.html
+++ b/frontend/src/app/modules/shared/components/card/card.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-9 col-lg-6 mx-auto">
     <div class="card rounded-0">
       <div class="card-header">
-        <h3 class="mb-0">{{ title }}</h3>
+        <h3 class="mb-0 text-truncate">{{ title }}</h3>
       </div>
       <div class="card-body">
         <ng-content></ng-content>
