#21: fix script upload

--- a/frontend/src/app/modules/features/landing/landing.component.html
+++ b/frontend/src/app/modules/features/landing/landing.component.html
@@ -7,7 +7,10 @@
       <a class="btn btn-primary btn-lg me-3" role="button" routerLink="/login"
         >Login</a
       >
-      <a class="btn btn-primary btn-lg" role="button" routerLink="/register"
+      <a
+        class="btn btn-primary btn-lg me-3"
+        role="button"
+        routerLink="/register"
         >Registrieren</a
       >
       <a class="btn btn-primary btn-lg" role="button" routerLink="/scripts"
