--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -22,9 +22,9 @@
             <a
               *ngIf="authService.isLoggedIn()"
               class="nav-link"
-              routerLink="/message"
+              routerLink="/scripts"
               routerLinkActive="active"
-              >Message</a
+              >Deine Skripte</a
             >
           </li>
         </ul>
