#21: extend guards and fix stylings

--- a/frontend/src/app/modules/features/scripts/components/script-list-item/script-list-item.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-list-item/script-list-item.component.html
@@ -1,14 +1,16 @@
-<div role="button" routerLink="/{{ script?.id }}">
-  <div class="card" style="width: 10rem; height: 10rem">
-    <div class="d-flex align-items-center justify-content-center h-100">
+<div [routerLink]="'/scripts/' + (isCreate ? 'new' : script?.id)" role="button">
+  <div [class.bg-light]="isCreate" class="card">
+    <div class="d-flex align-items-center justify-content-center h-100 p-3">
       <img
-        alt="Skript Zeichen"
-        class="card-img p-3"
-        src="../../../../../../assets/illustrations/script_cropped.svg"
-        style="opacity: 0.1"
+        [alt]="isCreate ? 'Skript hochladen' : script.name"
+        [style.opacity]="isCreate ? 1 : 0.1"
+        class="card-img"
+        src="../../../../../../assets/illustrations/script_{{
+          isCreate ? 'plus_' : ''
+        }}cropped.svg"
       />
     </div>
-    <div class="card-img-overlay">
+    <div *ngIf="!isCreate" class="card-img-overlay">
       <h5 class="card-title text-truncate">{{ script?.name }}</h5>
     </div>
   </div>
