#21: enhance not found error

--- a/frontend/src/app/modules/features/scripts/components/script-list/script-list.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-list/script-list.component.html
@@ -1,4 +1,4 @@
-<h2>{{ title }}</h2>
+<h1 class="display-4 mb-3">{{ title }}</h1>
 <div class="mb-5 d-flex flex-wrap gap-4">
   <app-script-list-item
     *ngIf="hasUploadButton"
