--- a/frontend/src/app/modules/features/landing/landing.component.html
+++ b/frontend/src/app/modules/features/landing/landing.component.html
@@ -1,6 +1,6 @@
 <app-page-layout>
   <div *ngIf="!authService.isLoggedIn(); else loggedIn" class="jumbotron mt-5">
-    <h1 class="display-4">Willkommen zu Aktoria!</h1>
+    <h1 class="display-4 mb-3">Willkommen zu Aktoria!</h1>
     <p class="lead">Deine App um jederzeit, alleine Skripten zu üben.</p>
     <hr class="my-4" />
     <div class="flex-row">
