#21: add script overview (ui)

--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
   </header>
-  <main class="p-5 flex-grow-1">
+  <main class="p-5 flex-grow-1 d-flex flex-column">
     <ng-content></ng-content>
   </main>
   <footer *ngIf="showFooter" class="px-5 bg-light"></footer>
