--- a/frontend/src/app/modules/features/scripts/components/script-list-item/script-list-item.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-list-item/script-list-item.component.scss
@@ -4,12 +4,11 @@
 }
 
 .card {
-  transition: all 300ms ease-in-out;
+  transition: box-shadow 300ms ease-in-out;
   width: 11rem;
   height: 11rem;
 
   &:hover {
     box-shadow: 0 8px 17px 0 rgb(0 0 0 / 8%);
-    transform: scale(1.005);
   }
 }
