--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -14,7 +14,7 @@
     <ng-template #noError>
       <div>
         <div class="d-flex justify-content-between align-items-center">
-          <h1 class="display-4 mb-3">{{ script?.name }}</h1>
+          <h1 class="display-3 mb-3 text-truncate">{{ script?.name }}</h1>
           <div>
             <button
               class="btn btn-primary me-3"
