--- a/frontend/src/app/modules/features/scripts/components/script-upload/script-upload.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-upload/script-upload.component.html
@@ -46,8 +46,33 @@
         </app-form-errors>
       </div>
       <div class="form-group mb-3">
-        <div class="d-flex justify-content-between">
-          <button class="btn btn-secondary" routerLink="/scripts" type="button">
+        <div class="d-flex align-items-center">
+          <label class="me-2 fw-bold" for="input-startpage">Startseite</label>
+          <input
+            class="form-control"
+            formControlName="startPage"
+            id="input-startpage"
+            name="startPage"
+            placeholder="0"
+            type="number"
+          />
+        </div>
+        <app-form-errors>
+          <app-form-error *ngIf="fieldHasErrors('startPage', 'required')"
+            >Bitte gib die Startseite an.
+          </app-form-error>
+          <app-form-error *ngIf="fieldHasErrors('startPage', 'maxlength')"
+            >Startseite zu groß.
+          </app-form-error>
+        </app-form-errors>
+      </div>
+      <div class="form-group mb-3">
+        <div class="d-flex justify-content-end">
+          <button
+            class="btn btn-secondary me-3"
+            routerLink="/scripts"
+            type="button"
+          >
             Abbrechen
           </button>
           <app-button
