#25: connect delete button with backend

--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -22,7 +22,9 @@
             >
               Skript ansehen
             </button>
-            <button class="btn btn-danger">Skript löschen</button>
+            <button (click)="deleteScript()" class="btn btn-danger">
+              Skript löschen
+            </button>
           </div>
         </div>
       </div>
