--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -1,33 +1,23 @@
-<app-page-layout>
-  <div
-    *ngIf="loading; else loaded"
-    class="w-100 flex-grow-1 d-flex justify-content-center align-items-center"
-  >
-    <div class="spinner-border text-secondary" role="status">
-      <span class="sr-only"></span>
-    </div>
-  </div>
-  <ng-template #loaded>
-    <app-alert *ngIf="error; else noError" [closeable]="false" type="danger">
-      <strong>Fehler!</strong> Skript wurde nicht gefunden.
-    </app-alert>
-    <ng-template #noError>
-      <div>
-        <div class="d-flex justify-content-between align-items-center">
-          <h1 class="display-3 mb-3 text-truncate">{{ script?.name }}</h1>
-          <div>
-            <button
-              class="btn btn-primary me-3"
-              routerLink="/scripts/{{ script.id }}/read"
-            >
-              Skript ansehen
-            </button>
-            <button (click)="deleteScript()" class="btn btn-danger">
-              Skript löschen
-            </button>
-          </div>
+<app-page-layout [loading]="loading">
+  <app-alert *ngIf="error; else noError" [closeable]="false" type="danger">
+    <strong>Fehler!</strong> Skript wurde nicht gefunden.
+  </app-alert>
+  <ng-template #noError>
+    <div>
+      <div class="d-flex justify-content-between align-items-center">
+        <h1 class="display-3 mb-3 text-truncate">{{ script?.name }}</h1>
+        <div>
+          <button
+            class="btn btn-primary me-3"
+            routerLink="/scripts/{{ script?.id }}/read"
+          >
+            Skript ansehen
+          </button>
+          <button (click)="deleteScript()" class="btn btn-danger">
+            Skript löschen
+          </button>
         </div>
       </div>
-    </ng-template>
+    </div>
   </ng-template>
 </app-page-layout>
