--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column min-vh-100 bg-{{ theme }}">
+<div class="wrapper d-flex flex-column min-vh-100 bg-{{ theme }}">
   <header *ngIf="showHeader" class="fixed-top">
     <nav
       class="px-5 navbar navbar-expand-lg navbar-dark bg-{{
@@ -57,7 +57,18 @@
     </nav>
   </header>
   <main class="w-100 p-5 flex-grow-1 d-flex flex-column">
-    <ng-content></ng-content>
+    <div
+      *ngIf="loading"
+      @fixedAppear
+      class="fixed-top vh-100 vw-100 flex-grow-1 d-flex justify-content-center align-items-center"
+    >
+      <div class="spinner-border text-secondary" role="status">
+        <span class="sr-only"></span>
+      </div>
+    </div>
+    <div *ngIf="!loading" @fixedAppear class="flex-grow-1 d-flex flex-column">
+      <ng-content></ng-content>
+    </div>
   </main>
   <footer *ngIf="showFooter" class="px-5 bg-light"></footer>
 </div>
