#26: add delete modal

--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -1,5 +1,5 @@
-<app-page-layout [loading]="loading">
-  <app-alert *ngIf="error; else noError" [closeable]="false" type="danger">
+<app-page-layout [loading]="getLoading">
+  <app-alert *ngIf="getError; else noError" [closeable]="false" type="danger">
     <strong>Fehler!</strong> Skript wurde nicht gefunden.
   </app-alert>
   <ng-template #noError>
@@ -13,9 +13,28 @@
           >
             Skript ansehen
           </button>
-          <button (click)="deleteScript()" class="btn btn-danger">
+          <button (click)="openModal(deleteModal)" class="btn btn-danger">
             Skript löschen
           </button>
+          <ng-template #deleteModal let-modal>
+            <app-modal
+              (confirm)="deleteScript(modal)"
+              (decline)="modal.dismiss()"
+              [loading]="deleteLoading"
+              confirmBtnLabel="Löschen"
+              title="Skript löschen"
+            >
+              <app-alert
+                *ngIf="deleteError"
+                [closeable]="false"
+                type="danger"
+                >{{ this.deleteError }}</app-alert
+              >
+              Sicher, dass du
+              <strong class="text-primary">{{ script?.name }}</strong>
+              unwiderruflich löschen möchtest möchtest?
+            </app-modal>
+          </ng-template>
         </div>
       </div>
     </div>
