--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -1,28 +1,25 @@
 <app-page-layout>
   <div *ngIf="user">
-    <h1>Profil</h1>
-    <h3>Deine Kontodaten</h3>
+    <h1 class="display-1">Profil</h1>
+    <div class="d-flex justify-content-between align-items-center">
+      <h3>Deine Daten</h3>
+      <button class="btn btn-primary" routerLink="/">Ändern</button>
+    </div>
 
-    <div class="position-relative">
-      <button
-        class="btn btn-outline-primary position-absolute top-0 end-0"
-        routerLink="/"
-      >
-        Nutzerdaten ändern
-      </button>
-      <div class="d-grid p-3">
-        <strong>Vorname</strong>
-        <span class="text-truncate">{{ user.firstName }}</span>
+    <div class="mb-5">
+      <div class="row mt-3 mb-3">
+        <strong class="col-sm-2 text-truncate text-end">Vorname</strong>
+        <span class="col text-truncate">{{ user.firstName }}</span>
       </div>
-      <div class="d-grid p-3">
-        <strong>Nachname</strong>
-        <span class="text-truncate">{{ user.lastName }}</span>
+      <div class="row mt-3 mb-3">
+        <strong class="col-sm-2 text-truncate text-end">Nachname</strong>
+        <span class="col text-truncate">{{ user.lastName }}</span>
       </div>
-      <div class="d-grid p-3">
-        <strong>E-Mail</strong>
-        <span class="text-truncate">{{ user.email }}</span>
+      <div class="row mt-3 mb-3">
+        <strong class="col-sm-2 text-truncate text-end">E-Mail</strong>
+        <span class="col text-truncate">{{ user.email }}</span>
       </div>
     </div>
-    <button class="btn btn-outline-danger" routerLink="/">Konto Löschen</button>
+    <button (click)="onDelete()" class="btn btn-danger">Profil Löschen</button>
   </div>
 </app-page-layout>
